--- a/package.json
+++ b/package.json
@@ -3,21 +3,60 @@
   "license": "0BSD",
   "version": "1.0.0",
   "main": "index.ts",
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/analytics": "^21.12.0",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.1.2",
+    "@types/react-redux": "^7.1.34",
+    "axios": "^1.8.3",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.38",
+    "expo-constants": "^17.0.8",
+    "expo-dev-client": "^5.0.14",
+    "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
+    "jest": "~29.7.0",
+    "jest-expo": "~52.0.6",
+    "mixpanel-react-native": "^3.0.8",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
+    "@types/redux-mock-store": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "babel-preset-expo": "^12.0.9",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react": "^7.37.4",
+    "jest-expo": "^52.0.6",
+    "react-test-renderer": "^18.3.1",
+    "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.5",
+    "ts-jest": "^29.2.6",
     "typescript": "^5.3.3"
   },
   "private": true
